--- a/src/view/DepartemenView.form
+++ b/src/view/DepartemenView.form
@@ -535,6 +535,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Search"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchBtnActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="searchDepartemenInput">
             </Component>
@@ -558,6 +561,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableDepartemenMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
