--- a/src/view/DepartemenView.form
+++ b/src/view/DepartemenView.form
@@ -144,6 +144,9 @@
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="Karyawan"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="karyawanBtnLabelMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
