Revisi bug yang ditemukan pas kelas KSP rabu malam
Kalian yang mau bugfinding sendiri, jangan download versi ini, download yg ini: https://github.com/tebri-artanto/GD_KSP_OP2/tree/f7fc0f1f36c0a68367e942083dc4387f1abea1d7

Co-Authored-By: tebri-artanto <71914107+tebri-artanto@users.noreply.github.com>

--- a/src/view/StaffView.form
+++ b/src/view/StaffView.form
@@ -2,8 +2,6 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
-    </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
@@ -15,6 +13,8 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroup3">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -93,6 +93,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="24" style="1"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="GUIDED KSP OBJECT PERSISTENCE"/>
             <Property name="alignmentY" type="float" value="0.0"/>
           </Properties>
